--- a/W01/rectangle.html
+++ b/W01/rectangle.html
@@ -4,19 +4,30 @@
   <meta charset="UTF-8">
   <title>rectangle</title>
   <link rel="stylesheet" href="rec.css">
-  <script src="calculate.js"></script>
 </head>
 <body>
-<div class="rectangle">
-  <input class="rectangle-width" type="textbox">
+<div id="rectangle">
+  宽度：
+  <input id="rectangle-width" type="textbox" autofocus="autofocus" onBlur="aler()">
+  <span class="star">*</span>
+  <p id="one"></p>
   <br>
-  <input class="rectangle-height" type="textbox">
+  高度：
+  <input id="rectangle-height" type="textbox" onBlur="ale()">
+  <span class="star">*</span>
+  <p id="two"></p>
   <br>
-  <input class="rectangle-calc" type="button">
+  <input id="rectangle-calc" type="button" value="计算" id="btn" onclick="calculate()">
+  <p></p>
   <br>
-  <input class="rectangle-perimeter" type="textbox">
+  周长：
+  <input id="rectangle-perimeter" type="textbox" readonly>
+  <p></p>
   <br>
-  <input class="rectangle-area" type="textbox">
+  面积：
+  <input id="rectangle-area" type="textbox" readonly>
+  <p></p>
 </div>
 </body>
+<script src="calculate.js"></script>
 </html>
