--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <a href="https://wuxiaoton.github.io/spa/W01/rectangle.html">矩形计算</a>
-    <a href="https://wuxiaoton.github.io/spa/W02/timer-button.html"><倒计时/a>
+    <a href="https://wuxiaoton.github.io/spa/W02/timer-button.html">倒计时</a>
     <a href="https://wuxiaoton.github.io/spa/W03/password.html">密码</a>
     <a href="https://wuxiaoton.github.io/spa/W04/age.html">滑杆年龄</a>
     <a href="https://wuxiaoton.github.io/spa/W05/progress.html">进度条</a>
