--- a/index.html
+++ b/index.html
@@ -5,12 +5,21 @@
   <title>index</title>
 </head>
 <body>
-<a href="https://wuxiaoton.github.io/spa/W01/rectangle.html">矩形计算</a>
+<div style="margin-left:100px;magin-top:100px;">
+    <a href="https://wuxiaoton.github.io/spa/W01/rectangle.html">矩形计算</a>
+    </br>
     <a href="https://wuxiaoton.github.io/spa/W02/timer-button.html">倒计时</a>
+    </br>
     <a href="https://wuxiaoton.github.io/spa/W03/password.html">密码</a>
+    </br>
     <a href="https://wuxiaoton.github.io/spa/W04/age.html">滑杆年龄</a>
+    </br>
     <a href="https://wuxiaoton.github.io/spa/W05/progress.html">进度条</a>
+    </br>
     <a href="https://wuxiaoton.github.io/spa/W"></a>
+    </br>
     <a href="https://wuxiaoton.github.io/spa/W"></a>
+    </br>
+</div>
 </body>
 </html>
