--- a/W02/timer-button.html
+++ b/W02/timer-button.html
@@ -10,7 +10,7 @@
       <input type="button" value="确定(10)" id="button" onclick="aler()">
   </div>
 </body>
-<script src="http://code.jquery.com/jquery-1.4.1.min.js"></script>
-<script src="http://code.jquery.com/jquery-1.4.1.js"></script>
+<script src="https://code.jquery.com/jquery-1.4.1.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.4.1.js"></script>
 <script src="timer.js"></script>
 </html>
