--- a/W03/password.html
+++ b/W03/password.html
@@ -13,7 +13,7 @@
     <img src="http://spa.wangding.in/01-html-widget/images/eye-close.png" alt="eye" onmousemove="see()" onmouseout="seeu()" id="eye">
 </div>
 </body>
-<script src="http://code.jquery.com/jquery-1.4.1.min.js"></script>
-<script src="http://code.jquery.com/jquery-1.4.1.js"></script>
+<script src="https://code.jquery.com/jquery-1.4.1.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.4.1.js"></script>
 <script src="password.js"></script>
 </html>
