--- a/W05/progress.html
+++ b/W05/progress.html
@@ -14,7 +14,7 @@
   <input type="button" value="restart" onclick="progress(this)">
 </span>
 </body>
-<script src="http://code.jquery.com/jquery-1.4.1.min.js"></script>
-<script src="http://code.jquery.com/jquery-1.4.1.js"></script>
+<script src="https://code.jquery.com/jquery-1.4.1.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.4.1.js"></script>
 <script src="progress.js"></script>
 </html>
