--- a/W04/age.html
+++ b/W04/age.html
@@ -12,7 +12,7 @@
   <p id="age">您的年龄为：0</p>
 </div>
 </body>
-<script src="http://code.jquery.com/jquery-1.4.1.min.js"></script>
-<script src="http://code.jquery.com/jquery-1.4.1.js"></script>
+<script src="https://code.jquery.com/jquery-1.4.1.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.4.1.js"></script>
 <script src="age.js"></script>
 </html>
