--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </br>
     <a href="https://wuxiaoton.github.io/spa/W05/progress.html">进度条</a>
     </br>
-    <a href="https://wuxiaoton.github.io/spa/W"></a>
+    <a href="https://wuxiaoton.github.io/spa/W06/field.html">字段</a>
     </br>
     <a href="https://wuxiaoton.github.io/spa/W"></a>
     </br>
