--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </br>
     <a href="https://wuxiaoton.github.io/spa/W07/string.html">字符</a>
     </br>
-    <a href="https://wuxiaoton.github.io/spa/W"></a>
+    <a href="https://wuxiaoton.github.io/spa/W08/input.html">表单</a>
     </br>
     <a href="https://wuxiaoton.github.io/spa/W"></a>
     </br>
