--- a/W09/H5.html
+++ b/W09/H5.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>H5校验</title>
+  <link rel="stylesheet" href="H5.css">
 </head>
 <body>
   <div class="rectangle">
@@ -19,6 +20,7 @@
       <br/>
       <label for="preimeter">周长</label>
       <input type="textbox" class="preimeter" id="preimeter">
+      <br/>
       <label for="area">面积</label>
       <input type="textbox" class="area" id="area">
     </form>
