--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </br>
     <a href="https://wuxiaoton.github.io/spa/W09/H5.html">H5校验</a>
     </br>
-    <a href="https://wuxiaoton.github.io/spa/W"></a>
+    <a href="https://wuxiaoton.github.io/spa/W10/echarts.html">二进熵函数</a>
     </br>
     <a href="https://wuxiaoton.github.io/spa/W"></a>
     </br>
