--- a/index.html
+++ b/index.html
@@ -26,8 +26,17 @@
     </br>
     <a href="https://wuxiaoton.github.io/spa/W10/echarts.html">二进熵函数</a>
     </br>
+    <a href="https://wuxiaoton.github.io/spa/W11/highlight.html">语法高亮</a>
+    </br>
     <a href="https://wuxiaoton.github.io/spa/W"></a>
     </br>
+    <a href="https://wuxiaoton.github.io/spa/W"></a>
+    </br>
+    <a href="https://wuxiaoton.github.io/spa/W"></a>
+    </br>
+    <a href="https://wuxiaoton.github.io/spa/W"></a>
+    </br>
+    <a href="https://wuxiaoton.github.io/spa/W"></a>
 </div>
 </body>
 </html>
